--- a/popup.html
+++ b/popup.html
@@ -78,7 +78,12 @@
             tags :<br />
             <div id="tags" class="list"></div>
         </div>
+        <div id="vid_extra_area" style="display: none">
+            追加情報 :<br />
+            <div id="vid_extra" class="list"></div>
+        </div>
     </div>
+
     <div id="debug_log" style="display: none">
         <hr class="debug_hr" />
 
